Revert to external API call

--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "nodemon src/server.js",
-    "build": "CI=false react-scripts build",
+    "server": "node src/server.js",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run server\" \"npm start\"",
+    "postbuild": "npm run server"
   },
   "eslintConfig": {
     "extends": [
