--- a/package.json
+++ b/package.json
@@ -18,12 +18,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "server": "node src/server.js",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "concurrently \"npm run server\" \"npm start\"",
-    "postbuild": "npm run server"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
